--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "NODE_ENV=local mocha --recursive"
   },
   "dependencies": {
+    "bcrypt": "^4.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
