--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "~1.9.1",
+    "uuid": "^7.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
