--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.1",
     "morgan": "~1.9.1",
+    "pg": "^8.2.1",
     "uuid": "^7.0.1"
   },
   "devDependencies": {
