--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "NODE_ENV=local mocha --recursive"
+    "test": "NODE_ENV=development mocha --recursive"
   },
   "dependencies": {
     "bcrypt": "^4.0.0",
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "morgan": "~1.9.1",
+    "objection": "^2.1.3",
     "pg": "^8.2.1",
     "uuid": "^7.0.1"
   },
